infrastructure/kitos-dev/kitos/databases/hangfire-dev-db/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: hangfire-dev-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: kitos
    app.kubernetes.io/managed-by: easy-hosting
    network-policy.kubernetes.io/type: ingress
    network-policy.kubernetes.io/purpose: allow-namespace
  name: hangfire-dev-db-allow-from-namespace-deny-egress
  namespace: kitos
spec:
  egress: []
  ingress:
  - from:
    - podSelector: {}
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: hangfire-dev-db
  policyTypes:
  - Ingress
  - Egress
